[gd_scene load_steps=38 format=3 uid="uid://cm8ekelhfr6n7"]

[ext_resource type="Script" path="res://scenes/Monsters/cursed_worker.gd" id="1_j6ycp"]
[ext_resource type="Texture2D" uid="uid://dqhcr3klc6e5x" path="res://graphic/Monsters/CursedWorker/aberration human - idle-Sheet-Sheet.png" id="2_gk6s2"]
[ext_resource type="Texture2D" uid="uid://cc8gvnn0ds0wf" path="res://graphic/Monsters/CursedWorker/aberration human - death-Sheet.png" id="3_fy1fj"]
[ext_resource type="Texture2D" uid="uid://36phuftvnwlb" path="res://graphic/Monsters/CursedWorker/aberration human - run-Sheet.png" id="3_sckl2"]
[ext_resource type="Shader" path="res://graphic/shaders/aberration1.gdshader" id="4_i4mht"]
[ext_resource type="AudioStream" uid="uid://bf2mf7v3l6aev" path="res://Audio/SFX/monsters/EnemyHit1.wav" id="6_jesnl"]
[ext_resource type="AudioStream" uid="uid://cdybpqppvvfrj" path="res://Audio/SFX/monsters/EnemyDied1.wav" id="7_v2vxd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f50xw"]
shader = ExtResource("4_i4mht")
shader_parameter/range = 0.015
shader_parameter/noiseQuality = 33.7
shader_parameter/noiseIntensity = 0.001
shader_parameter/offsetIntensity = 0.01
shader_parameter/colorOffsetIntensity = 0.514
shader_parameter/modulate = Color(0.0823529, 0, 0.729412, 1)
shader_parameter/modulate_strength = 0.349

[sub_resource type="AtlasTexture" id="AtlasTexture_xcxd8"]
atlas = ExtResource("3_fy1fj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3fln"]
atlas = ExtResource("3_fy1fj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1vhp"]
atlas = ExtResource("3_fy1fj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr70s"]
atlas = ExtResource("3_fy1fj")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbk57"]
atlas = ExtResource("3_fy1fj")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8so8s"]
atlas = ExtResource("3_fy1fj")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlbwf"]
atlas = ExtResource("3_fy1fj")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy3vu"]
atlas = ExtResource("3_fy1fj")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3ilc"]
atlas = ExtResource("3_fy1fj")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jshf"]
atlas = ExtResource("2_gk6s2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t755y"]
atlas = ExtResource("2_gk6s2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_58yrh"]
atlas = ExtResource("2_gk6s2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8ami"]
atlas = ExtResource("2_gk6s2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn1xp"]
atlas = ExtResource("3_sckl2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sd6o"]
atlas = ExtResource("3_sckl2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7axia"]
atlas = ExtResource("3_sckl2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4b3t"]
atlas = ExtResource("3_sckl2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_p3v3p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcxd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3fln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1vhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr70s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbk57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8so8s")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_dlbwf")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_wy3vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3ilc")
}],
"loop": false,
"name": &"death",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jshf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t755y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58yrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8ami")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn1xp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sd6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7axia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4b3t")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_354lm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6k7ae"]
radius = 147.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jyxly"]
radius = 16.0312

[sub_resource type="Curve" id="Curve_3rqq5"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.48, 0.78022), 0.0, 0.0, 0, 0, Vector2(1, 0.0659341), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_oqddt"]
curve = SubResource("Curve_3rqq5")

[sub_resource type="Gradient" id="Gradient_hpo3i"]
offsets = PackedFloat32Array(0.401639, 1)
colors = PackedColorArray(0.50644, 0.00143526, 0.692051, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_i6vq1"]
gradient = SubResource("Gradient_hpo3i")

[sub_resource type="Curve" id="Curve_6gblh"]
max_value = 5.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 5), 0.0, 0.0, 0, 0, Vector2(0.153333, 2.25275), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_86n1r"]
curve = SubResource("Curve_6gblh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yq7bi"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
initial_velocity_min = 123.6
initial_velocity_max = 348.31
angular_velocity_min = 2000.0
angular_velocity_max = 2000.0
gravity = Vector3(0, 0, 0)
radial_accel_min = 51.69
radial_accel_max = 51.69
scale_min = 2.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_86n1r")
color = Color(0.611765, 0, 0.815686, 1)
color_ramp = SubResource("GradientTexture1D_i6vq1")
alpha_curve = SubResource("CurveTexture_oqddt")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v3ax2"]
shader = ExtResource("4_i4mht")
shader_parameter/range = 0.015
shader_parameter/noiseQuality = 57.3
shader_parameter/noiseIntensity = 0.003
shader_parameter/offsetIntensity = 0.03
shader_parameter/colorOffsetIntensity = 0.963
shader_parameter/modulate = Color(0.211765, 0, 0.176471, 1)
shader_parameter/modulate_strength = 0.5

[node name="CursedWorker" type="CharacterBody2D"]
collision_layer = 33
script = ExtResource("1_j6ycp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_f50xw")
sprite_frames = SubResource("SpriteFrames_p3v3p")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.930653

[node name="CharacterBody2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_354lm")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_6k7ae")

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_jyxly")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(3, 1)
emitting = false
amount = 14
amount_ratio = 0.7399
process_material = SubResource("ParticleProcessMaterial_yq7bi")
lifetime = 0.3
one_shot = true
explosiveness = 1.0

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_v3ax2")
offset_left = -24.0
offset_top = -19.0
offset_right = 16.0
offset_bottom = 21.0

[node name="GotHitSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_jesnl")
volume_db = -24.711
pitch_scale = 1.02
bus = &"SFX"

[node name="DeadSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_v2vxd")
volume_db = -15.298
pitch_scale = 0.75
bus = &"SFX"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
